# LabsFA

./: CMakeLists.txt  README.md
Laba2/Task1/: task1.c
Laba2/Task2/: task2.c
Laba2/Task3/: task3.c
Laba2/Task7/: task7.c
Laba2/Task8/: task8.c
Laba3/Task1/: task1.c
Laba3/Task10/: task10.c
Laba3/Task4/: array.c  array.h  string.c  string.h  task4.c  task4.h
