cmake_minimum_required(VERSION 3.20)
project(LabaInfa C)
set(CMAKE_C_STANDARD 99)
add_executable(Laba2Task7 Laba2/Task7/task7.c)
add_executable(Laba2Task1 Laba2/Task1/task1.c)
add_executable(Laba2Task2 Laba2/Task2/task2.c)
add_executable(Laba2Task3 Laba2/Task3/task3.c)
target_link_libraries(Laba2Task7 m)
target_link_libraries(Laba2Task2 m)