cmake_minimum_required(VERSION 3.20)
project(LabaInfa C)
set(CMAKE_C_STANDARD 99)
add_executable(Laba2Task1 Laba2/Task1/task1.c)
add_executable(Laba2Task2 Laba2/Task2/task2.c)
add_executable(Laba2Task3 Laba2/Task3/task3.c)
add_executable(Laba2Task7 Laba2/Task7/task7.c)
add_executable(Laba2Task8 Laba2/Task8/task8.c)
add_executable(Laba3Task1 Laba3/Task1/task1.c)
add_executable(Laba3Task3 Laba3/Task3/task3.c)
add_executable(Laba3Task4 Laba3/Task4/string.h Laba3/Task4/string.c Laba3/Task4/task4.h Laba3/Task4/task4.c
        Laba3/Task4/array.h Laba3/Task4/array.c)
add_executable(Laba3Task10 Laba3/Task10/task10.c)
target_link_libraries(Laba2Task7 m)
target_link_libraries(Laba2Task2 m)